--- a/Javascript/javascript01.html
+++ b/Javascript/javascript01.html
@@ -428,9 +428,9 @@ console.log(...arr3) // 100200javascirpt500
             <div id="sample13" class="sample">
                 <h3>13. 객체 : 데이터 저장(키와값) 표현방법 1 : 객체 선언 후 배열 방식으로 데이터 입력</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 배열이 아닌 객체에 인덱스로 접근하여 속성을 추가하고 값을 할당한 후에 해당 값을 콘솔에 출력하는 예제입니다.
+                    이 코드는 객체에 인덱스로 접근하여 속성을 추가하고 값을 할당하고, 이후에 해당 값을 콘솔에 출력하는 방법을 보여줍니다. JavaScript에서는 객체의 속성으로 문자열뿐만 아니라
+                    숫자도 사용할 수 있습니다.
                 </p>
                 <pre><code>{
 obj[0] = 100; //obj변수에 숫자 100을 저장
@@ -445,10 +445,10 @@ console.log(obj[2]);
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100 <br />
+                            200 <br />
+                            javascript
+
                         </div>
                     </details>
                 </div>
@@ -458,9 +458,8 @@ console.log(obj[2]);
             <div id="sample14" class="sample">
                 <h3>14. 객체 : 데이터 저장(키와값) 표현방법 2 : 객체 선언 후 객체 방식으로 데이터 입력</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 생성자 함수를 사용하여 객체를 생성하고, 그 후에 객체에 속성을 추가하고 해당 값을 콘솔에 출력하는 예제입니다.
+                    생성자 함수를 사용하여 객체를 생성하고, 이후에 동적으로 속성을 추가하고 사용하는 것은 JavaScript의 객체 생성과 속성 추가에 대한 다른 방법을 보여줍니다.
                 </p>
                 <pre><code>{
 const obj = new Object(); // 객체 선언
@@ -477,10 +476,10 @@ console.log(obj.c);
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100 <br />
+                            200 <br />
+                            javascript
+
                         </div>
                     </details>
                 </div>
@@ -490,9 +489,9 @@ console.log(obj.c);
             <div id="sample15" class="sample">
                 <h3>15. 객체 : 데이터 저장(키와값) 표현방법 3 : 리터럴 방식으로 객체 선언</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 빈 객체를 생성한 후에 해당 객체에 속성을 동적으로 추가하고, 그 값을 콘솔에 출력하는 예제입니다.
+                    이 코드는 객체에 동적으로 속성을 추가하고 그 값을 확인하는 예제를 보여줍니다. 객체는 다양한 데이터를 속성으로 묶어서 사용할 때 유용하며, 속성을 동적으로 추가하여
+                    유연하게 활용할 수 있습니다.
                 </p>
                 <pre><code>{
 const obj = {};
@@ -509,10 +508,9 @@ console.log(obj.c);
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100 <br />
+                            200 <br />
+                            javascript
                         </div>
                     </details>
                 </div>
@@ -522,9 +520,8 @@ console.log(obj.c);
             <div id="sample16" class="sample">
                 <h3>16. 객체 : 데이터 저장(키와값) 표현방법 4 : 리터럴 방식으로 객체 선언과 동시에 초깃값을 설정</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 객체를 정의하고 해당 객체의 속성을 콘솔에 출력하는 예제입니다.
+                    이 코드는 객체를 사용하여 데이터를 그룹화하고, 속성에 접근하여 해당 값을 콘솔에 출력하는 방법을 보여줍니다.
                 </p>
                 <pre><code>{
 const obj = {
@@ -540,10 +537,9 @@ console.log(obj.c);
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100 <br />
+                            200 <br />
+                            javascript
                         </div>
                     </details>
                 </div>
@@ -553,9 +549,8 @@ console.log(obj.c);
             <div id="sample17" class="sample">
                 <h3>17. 객체 : 데이터 저장(키와값) 표현방법 5 : 배열안에 객체가 있는 방식</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 배열 안에 객체를 포함하는 예제입니다.
+                    이 코드는 배열 안에 객체를 포함하고, 배열과 객체의 요소에 접근하여 값을 출력하는 예제를 보여줍니다.
                 </p>
                 <pre><code>{
 const obj = [
@@ -580,10 +575,12 @@ console.log(obj[1].c) // jquery
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100 <br />
+                            200 <br />
+                            javascript <br />
+                            300 <br />
+                            400 <br />
+                            jquery
                         </div>
                     </details>
                 </div>
@@ -593,9 +590,8 @@ console.log(obj[1].c) // jquery
             <div id="sample18" class="sample">
                 <h3>18. 객체 : 데이터 저장(키와값) 표현방법 6 : 객체안에 배열이 있는 방식</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 객체를 정의하고 해당 객체의 속성에 접근하는 예제입니다.
+                    이 코드는 객체의 속성에 접근하여 값을 출력하는 예제를 보여줍니다.
                 </p>
                 <pre><code>{
 const obj = {
@@ -613,10 +609,11 @@ console.log(obj.c)   // javascript
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100 <br />
+                            [200, 300] <br />
+                            200 <br />
+                            300 <br />
+                            javascript
                         </div>
                     </details>
                 </div>
@@ -626,9 +623,8 @@ console.log(obj.c)   // javascript
             <div id="sample19" class="sample">
                 <h3>19. 객체 : 데이터 저장(키와값) 표현방법 7 : 객체안에 객체가 있는 방식</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 중첩된 객체를 사용하는 예제입니다.
+                    이 코드는 객체 내에 다른 객체를 포함하고, 이를 통해 중첩된 구조를 만들고 접근하는 방법을 보여줍니다.
                 </p>
                 <pre><code>{
 const obj = {
@@ -645,10 +641,10 @@ console.log(obj.c) //javascript
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100<br />
+                            200<br />
+                            300<br />
+                            javascript
                         </div>
                     </details>
                 </div>
@@ -658,9 +654,8 @@ console.log(obj.c) //javascript
             <div id="sample20" class="sample">
                 <h3>20. 객체 : 데이터 저장(키와값) 표현방법 8 : 객체 + 함수가 있는 방식</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript에서 객체를 정의하고 객체 내부의 속성으로 다양한 데이터 유형과 함수를 포함하는 예제입니다.
+                    이 코드는 객체를 사용하여 다양한 데이터 유형과 함수를 하나의 단위로 묶어서 관리하는 방법을 보여줍니다.
                 </p>
                 <pre><code>{
 const obj = {
@@ -687,10 +682,13 @@ obj.f();
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100<br />
+                            200<br />
+                            300<br />
+                            javascript<br />
+                            javascript가 실행되었습니다.<br />
+                            javascript가 실행되었습니다.<br />
+                            javascript가 실행되었습니다.
                         </div>
                     </details>
                 </div>
@@ -700,9 +698,9 @@ obj.f();
             <div id="sample21" class="sample">
                 <h3>21. 객체 : 데이터 저장(키와값) 표현방법 9 : 객체구조분해할당</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+
+                    이 코드는 객체 해체 할당(destructuring assignment)을 사용하여 객체의 속성을 변수에 할당하는 예제입니다.
+                    이 코드는 객체 해체 할당을 사용하여 객체의 속성을 개별 변수에 간편하게 할당하고, 그 값을 출력하는 예제를 보여줍니다.
                 </p>
                 <pre><code>{
 const obj = {
@@ -721,10 +719,9 @@ console.log(c);
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            100<br />
+                            200<br />
+                            javascript
                         </div>
                     </details>
                 </div>
@@ -734,9 +731,8 @@ console.log(c);
             <div id="sample22" class="sample">
                 <h3>22. 객체 : 데이터 저장(키와값) 표현방법 10 : 객체펼침연산자</h3>
                 <p>
-                    배열 펼침 연산자는 배열을 풀어서 개별 요소로 분해하는 연산자입니다. 이 연산자는 대괄호([]) 안에서 사용되며, 배열을 쉼표로 구분된 개별 값으로 변환합니다. 이를 통해 배열을
-                    다른 배열이나 함수의 인자로 전달할 때, 배열의 요소를 개별적인 값으로 전달할 수 있습니다. 배열 펼침 연산자는 코드를 간결하게 만들고, 배열을 다루는 여러 가지 상황에서 유용하게
-                    사용됩니다.
+                    이 코드는 JavaScript의 객체와 전개 연산자(...)를 사용하여 객체를 병합하는 방법을 보여줍니다.
+                    이 코드는 객체를 병합하고 확장하는 방법을 보여주며, 전개 연산자를 이용하여 손쉽게 객체를 조작할 수 있다는 점을 보여줍니다.
                 </p>
                 <pre><code>{
 const obj1 = { a: 100, b: 200, c: "javascript" }
@@ -755,10 +751,13 @@ console.log(obj3)
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-                            100, 200, javascript<br />
-                            100, 200, javascript<br />
-                            100, 200, javascript, 300, 400, Jquery<br />
-                            100, 200, javascript, 500
+                            {a: 100, b: 200, c: 'javascrip'}<br />
+                            {a: 100, b: 200, c: 'javascrip', d: 'jquery'}<br />
+                            100<br />
+                            200<br />
+                            javascrip<br />
+                            jquery<br />
+                            {a: 100, b: 200, c: 'javascrip', d: 'jquery'}
                         </div>
                     </details>
                 </div>
