--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 <span>자바스크립트</span>
             </a>
         </div>
+        <div class="draggableIcon icon">
+            <a href="mysql/index.html" target="_blank">
+                <img src="assets/img/icon-mysql.png" alt="MySQL">
+                <span>MySQL</span>
+            </a>
+        </div>
     </div>
     <!-- //main__icons -->
 
@@ -45,12 +51,6 @@
                             다 만들었을 때의 성취감이 너무 좋았고 저는 컴퓨터에 관련된 것이면 다 배워보고 싶다는 생각을 해서
                             라인아트컴퓨터학원에서 웹 디자인과 프론트엔드 기술을 배워서 취업을 하고 싶고 고등학교에서 배웠던 것과는 좀 다르고
                             1년간 공부를 하지 않았기 때문에 느려도 힘들어도 포기하지 않고 열심히 배워서 웹 디자인과 프론트엔드 기술을 마스터하고 싶습니다.
-
-
-
-
-
-
                         </p>
                     </div>
                     <div class="skill">
@@ -65,6 +65,11 @@
                             <dt>javascript</dt>
                             <dd>JavaScript: 동적 웹 페이지 및 어플리케이션 개발에 있어 깊은 이해도를 보유하고 있습니다. 비동기 프로그래밍, ES6+ 문법, DOM 조작
                                 등을 포함한 고급 개념에 능숙합니다. 대규모 프로젝트에서의 성능 최적화와 디버깅에 경험이 풍부합니다.</dd>
+                            <dt>MySQL</dt>
+                            <dd>MySQL: 데이터 관리 및 조작에 대한 전문 지식을 갖추고 있습니다. 효율적인 데이터 저장구조 설계와 복잡한 SQL 쿼리 작성에 능숙하며, 데이터 정규화,
+                                백업,
+                                복구 전략의 구현에 경험이 있습니다. 또한, 트랜잭션 관리와 성능 최적화를 위한 인덱싱 기법을 활용하여 대용량 데이터베이스 시스템의 관리 및 운영에
+                                능통합니다.</dd>
                         </dl>
                         <dl>
                             <dt>react</dt>
@@ -77,6 +82,7 @@
                             <dt>next.js</dt>
                             <dd>Next.js: 서버 사이드 렌더링(SSR)과 정적 사이트 생성(SSG)에 대한 이해를 바
                                 탕으로 Next.js 프레임워크를 활용한 웹 어플리케이션 개발에 경험이 있습니다. SEO 최적화 및 퍼포먼스 향상을 위한 기술적 전략 구현에 능숙합니다
+
                             </dd>
                         </dl>
                     </div>
