--- a/mysql/mysql01.html
+++ b/mysql/mysql01.html
@@ -7,6 +7,7 @@
     <title>Mysql01</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/prism.css">
 </head>
 
 <body>
@@ -16,7 +17,11 @@
         </h1>
         <nav>
             <ul>
-                <li><a href="mysql01.html">MySQL 셋팅</a></li>
+                <li class="active"><a href="mysql01.html">MySQL</a></li>
+                <li><a href="mysql02.html">SQL 개념</a></li>
+                <li><a href="mysql03.html">데이터 베이스</a></li>
+                <li><a href="mysql04.html">테이블</a></li>
+
             </ul>
         </nav>
     </header>
@@ -42,9 +47,56 @@
                     <a href="https://www.mamp.imfo/namo/en/#download">https://www.mamp.imfo/namo/en/#download</a>
                 </div>
             </div>
+            <div id="sample03" class="sample">
+                <h3>MySQL 실행</h3>
+                <p>
+                    터미널을 실행하고 다음과 같이 작성해줍니다.
+                </p>
+                <div class="info">
+                    <p>윈도우 : cd MAMP/bin/mysql/bin(cd c:\MAMP\bin\mysql\bin)
+                    <p>로그인 : mysql -uroot -proot </p>
+                    </p>
+                </div>
+                <pre><code class="language-js">
+Welcome to the MySQL monitor.  Commands end with ; or \g.
+Your MySQL connection id is 9
+Server version: 5.7.24 MySQL Community Server (GPL)
+
+Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
+
+Oracle is a registered trademark of Oracle Corporation and/or its
+affiliates. Other names may be trademarks of their respective
+owners.
+
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+
+                </code></pre>
+                <div class="info">
+                    <p>맥 : cd MAMP/bin/mysql/bin(cd c:\MAMP\bin\mysql\bin)
+                    <p>로그인 : ./mysql -uroot -proot </p>
+                    </p>
+                </div>
+                <pre><code class="language-js">
+Welcome to the MySQL monitor.  Commands end with ; or \g.
+Your MySQL connection id is 400
+Server version: 5.7.39 MySQL Community Server (GPL)
+Copyright (c) 2000, 2022, Oracle and/or its affiliates.
+Oracle is a registered trademark of Oracle Corporation and/or its
+affiliates. Other names may be trademarks of their respective
+owners.
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+</code></pre>
+            </div>
         </div>
     </main>
     <!-- //main -->
+
+    <footer id="footer">
+        <a href="mailto:nys060121@naver.com">nys060121@naver.com</a>
+    </footer>
+    <!-- //footer -->
+
+    <script src="assets/js/prism.js"></script>
 </body>
 
 </html>
