--- a/mysql/mysql02.html
+++ b/mysql/mysql02.html
@@ -72,6 +72,7 @@
                     <li><i>R</i>OLLBACK : 데이터의 변경을 취소</li>
                 </ul>
             </div>
+        </div>
     </main>
     <!-- //main -->
 
