--- a/mysql/index.html
+++ b/mysql/index.html
@@ -17,7 +17,7 @@
         }
 
         a {
-            color: #000;
+            color: #fff;
             text-decoration: none;
         }
 
@@ -78,7 +78,7 @@
             display: inline-block;
             font-size: 16px;
             font-family: "nanumSquareNeo";
-            border: 1px dashed rgba(120, 111, 206, 0.514);
+            border: 1px dashed white;
             padding: 10px;
             margin: 2px;
             color: 165fcd;
