--- a/mysql/mysql01.html
+++ b/mysql/mysql01.html
@@ -57,8 +57,7 @@
                     <p>로그인 : mysql -uroot -proot </p>
                     </p>
                 </div>
-                <pre><code class="language-js">
-Welcome to the MySQL monitor.  Commands end with ; or \g.
+                <pre><code class="language-js">Welcome to the MySQL monitor.  Commands end with ; or \g.
 Your MySQL connection id is 9
 Server version: 5.7.24 MySQL Community Server (GPL)
 
@@ -68,16 +67,13 @@ Oracle is a registered trademark of Oracle Corporation and/or its
 affiliates. Other names may be trademarks of their respective
 owners.
 
-Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-                </code></pre>
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.</code></pre>
                 <div class="info">
                     <p>맥 : cd MAMP/bin/mysql/bin(cd c:\MAMP\bin\mysql\bin)
                     <p>로그인 : ./mysql -uroot -proot </p>
                     </p>
                 </div>
-                <pre><code class="language-js">
-Welcome to the MySQL monitor.  Commands end with ; or \g.
+                <pre><code class="language-js">Welcome to the MySQL monitor.  Commands end with ; or \g.
 Your MySQL connection id is 400
 Server version: 5.7.39 MySQL Community Server (GPL)
 Copyright (c) 2000, 2022, Oracle and/or its affiliates.
