--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="draggableIcon icon">
             <a href="Javascript/index.html" target="_blank">
-                <img src="assets/img/javascript.png" alt="자바스크립트">
+                <img src="assets/img/icon-javascript.png" alt="자바스크립트">
                 <span>자바스크립트</span>
             </a>
         </div>
@@ -25,6 +25,30 @@
             <a href="mysql/index.html" target="_blank">
                 <img src="assets/img/icon-mysql.png" alt="MySQL">
                 <span>MySQL</span>
+            </a>
+        </div>
+        <div class="draggableIcon icon">
+            <a href="quiz/index.html" target="_blank">
+                <img src="assets/img/icon-quiz.png" alt="Quiz">
+                <span>Quiz</span>
+            </a>
+        </div>
+        <div class="draggableIcon icon">
+            <a href="html5/index.html" target="_blank">
+                <img src="assets/img/icon-html5.png" alt="HTML5">
+                <span>Html5</span>
+            </a>
+        </div>
+        <div class="draggableIcon icon">
+            <a href="css/index.html" target="_blank">
+                <img src="assets/img/icon-css.png" alt="CSS">
+                <span>CSS</span>
+            </a>
+        </div>
+        <div class="draggableIcon icon">
+            <a href="githup/index.html" target="_blank">
+                <img src="assets/img/icon-githup.png" alt="Githup">
+                <span>Githup</span>
             </a>
         </div>
     </div>
