--- a/Javascript/test.html
+++ b/Javascript/test.html
@@ -12,55 +12,47 @@
         // 01 함수 : 선언적 함수
         {
             function func() {
-                console.log("01. 함수가 실행되었습니다.");
-            }
-            func();
+                console.log("함수")
+            } func();
         }
 
         // 02 함수 : 익명 함수
         {
             const func = function () {
-                console.log("02. 함수가 실행되었습니다.");
-            };
-            func();
+                console.log("함수")
+            }; func()
         }
         // 03 함수 : 매개변수 함수
         {
             function func(str) {
                 console.log(str);
-            }
-            func("03. 함수가 실행되었습니다.");
+            }; func("함수")
 
             const func1 = function (str) {
                 console.log(str);
-            }
-            func1("03. 함수가 실행되었습니다.");
+            }; func1("함수")
         }
         // 04 함수 : 리턴값 함수
         {
             function func() {
-                return "04. 함수가 실행되었습니다."
-            }
-            console.log(func());
+                return "함수"
+            } console.log(func());
 
             const func1 = function () {
-                return "04. 함수가 실행되었습니다."
+                return "함수"
             }
             console.log(func1());
         }
         // 05 함수 : 매개변수 + 리턴값 함수
         {
             function func(str) {
-                return str;
-            }
-            console.log(func("05. 함수가 실행되었습니다."));
-
+                return str
+            } console.log(func("함수"));
 
             const func1 = function (str) {
-                return str;
+                return str
             }
-            console.log(func1("05. 함수가 실행되었습니다."));
-
+            console.log(func1("함수"));
         }
 
 
