--- a/mysql/mysql05.html
+++ b/mysql/mysql05.html
@@ -36,7 +36,7 @@
                 <div class="info">
                     SELECT * FROM members;
                 </div>
-                <pre><code class="language-js">mysql> SELECT * FROM members3;
+                <pre><code class="language-js">mysql> SELECT * FROM members;
 +----------+---------+---------+--------+----------+------------+
 | memberID | youName | youPass | youAge | youBirth | regTime    |
 +----------+---------+---------+--------+----------+------------+
@@ -59,9 +59,9 @@
 
                 <h4>이름 데이터만 가져오기</h4>
                 <div class="info">
-                    SELECT youName FROM members3;
+                    SELECT youName FROM members;
                 </div>
-                <pre><code class="language-js">mysql> SELECT youName FROM members3;
+                <pre><code class="language-js">mysql> SELECT youName FROM members;
 +---------+
 | youName |
 +---------+
@@ -85,9 +85,9 @@
 
                 <h4>이름 + 나이 데이터만 가져오기</h4>
                 <div class="info">
-                    SELECT youName,youAge FROM members3;
+                    SELECT youName,youAge FROM members;
                 </div>
-                <pre><code class="language-js">SELECT youName,youAge FROM members3;
+                <pre><code class="language-js">SELECT youName,youAge FROM members;
 +---------+--------+
 | youName | youAge |
 +---------+--------+
@@ -109,11 +109,115 @@
 +---------+--------+
 15 rows in set (0.00 sec)</code></pre>
 
+                <h4>이름 내림차순 불러오기</h4>
+                <div class="info">
+                    SELECT * FROM members ORDER By youName DESC;
+                </div>
+                <pre><code class="language-js">SELECT * FROM members ORDER By youName DESC;
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|        6 | 황인지  | 1234    |     20 |   990315 | 1474187756 |
+|       15 | 황상연  | 1234    |     33 |   990304 | 1023958375 |
+|        3 | 최선화  | 1234    |     26 |   990123 | 1104781152 |
+|        9 | 이재혁  | 1215    |     24 |    10712 | 1023958375 |
+|       13 | 안지은  | 1234    |     33 |   840816 | 1023958375 |
+|        4 | 서대원  | 1234    |     26 |    11019 | 1111100000 |
+|       14 | 박진아  | 1232    |     33 |   990304 | 1023958375 |
+|        7 | 박정민  | 1234    |     29 |   961017 | 1023958375 |
+|       10 | 박소현  | 1234    |     29 |   960917 | 1231223123 |
+|        1 | 남윤서  | 1234    |     19 |    60121 | 1023958375 |
+|       11 | 김혜지  | 1234    |     28 |   951002 |  123456789 |
+|        5 | 김현민  | 1234    |     32 |   930604 | 1023958375 |
+|        2 | 김진우  | 1234    |     21 |    40416 | 1231231233 |
+|        8 | 강서연  | 1234    |     27 |   980420 |  123456744 |
+|       12 | 강경민  | 1234    |     28 |   970611 | 1023952467 |
++----------+---------+---------+--------+----------+------------+
+15 rows in set (0.00 sec)</code></pre>
+                <h4>이름 올림차순 불러오기</h4>
+                <div class="info">
+                    SELECT * FROM members ORDER By youName ASC;
+                </div>
+                <pre><code class="language-js">SELECT * FROM members ORDER By youName ASC;
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|       12 | 강경민  | 1234    |     28 |   970611 | 1023952467 |
+|        8 | 강서연  | 1234    |     27 |   980420 |  123456744 |
+|        2 | 김진우  | 1234    |     21 |    40416 | 1231231233 |
+|        5 | 김현민  | 1234    |     32 |   930604 | 1023958375 |
+|       11 | 김혜지  | 1234    |     28 |   951002 |  123456789 |
+|        1 | 남윤서  | 1234    |     19 |    60121 | 1023958375 |
+|       10 | 박소현  | 1234    |     29 |   960917 | 1231223123 |
+|        7 | 박정민  | 1234    |     29 |   961017 | 1023958375 |
+|       14 | 박진아  | 1232    |     33 |   990304 | 1023958375 |
+|        4 | 서대원  | 1234    |     26 |    11019 | 1111100000 |
+|       13 | 안지은  | 1234    |     33 |   840816 | 1023958375 |
+|        9 | 이재혁  | 1215    |     24 |    10712 | 1023958375 |
+|        3 | 최선화  | 1234    |     26 |   990123 | 1104781152 |
+|       15 | 황상연  | 1234    |     33 |   990304 | 1023958375 |
+|        6 | 황인지  | 1234    |     20 |   990315 | 1474187756 |
++----------+---------+---------+--------+----------+------------+
+15 rows in set (0.00 sec)</code></pre>
+                <h4>나이 내림차순 불러오기</h4>
+                <div class="info">
+                    SELECT * FROM members ORDER By youAge DESC;
+                </div>
+                <pre><code class="language-js"> SELECT * FROM members ORDER By youAge DESC;
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|       13 | 안지은  | 1234    |     33 |   840816 | 1023958375 |
+|       14 | 박진아  | 1232    |     33 |   990304 | 1023958375 |
+|       15 | 황상연  | 1234    |     33 |   990304 | 1023958375 |
+|        5 | 김현민  | 1234    |     32 |   930604 | 1023958375 |
+|        7 | 박정민  | 1234    |     29 |   961017 | 1023958375 |
+|       10 | 박소현  | 1234    |     29 |   960917 | 1231223123 |
+|       11 | 김혜지  | 1234    |     28 |   951002 |  123456789 |
+|       12 | 강경민  | 1234    |     28 |   970611 | 1023952467 |
+|        8 | 강서연  | 1234    |     27 |   980420 |  123456744 |
+|        3 | 최선화  | 1234    |     26 |   990123 | 1104781152 |
+|        4 | 서대원  | 1234    |     26 |    11019 | 1111100000 |
+|        9 | 이재혁  | 1215    |     24 |    10712 | 1023958375 |
+|        2 | 김진우  | 1234    |     21 |    40416 | 1231231233 |
+|        6 | 황인지  | 1234    |     20 |   990315 | 1474187756 |
+|        1 | 남윤서  | 1234    |     19 |    60121 | 1023958375 |
++----------+---------+---------+--------+----------+------------+
+15 rows in set (0.00 sec)</code></pre>
+                <h4>나이 올림차순 불러오기</h4>
+                <div class="info">
+                    SELECT * FROM members ORDER By youAge ASC;
+                </div>
+                <pre><code class="language-js">SELECT * FROM members ORDER By youAge ASC;
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|        1 | 남윤서  | 1234    |     19 |    60121 | 1023958375 |
+|        6 | 황인지  | 1234    |     20 |   990315 | 1474187756 |
+|        2 | 김진우  | 1234    |     21 |    40416 | 1231231233 |
+|        9 | 이재혁  | 1215    |     24 |    10712 | 1023958375 |
+|        3 | 최선화  | 1234    |     26 |   990123 | 1104781152 |
+|        4 | 서대원  | 1234    |     26 |    11019 | 1111100000 |
+|        8 | 강서연  | 1234    |     27 |   980420 |  123456744 |
+|       11 | 김혜지  | 1234    |     28 |   951002 |  123456789 |
+|       12 | 강경민  | 1234    |     28 |   970611 | 1023952467 |
+|        7 | 박정민  | 1234    |     29 |   961017 | 1023958375 |
+|       10 | 박소현  | 1234    |     29 |   960917 | 1231223123 |
+|        5 | 김현민  | 1234    |     32 |   930604 | 1023958375 |
+|       13 | 안지은  | 1234    |     33 |   840816 | 1023958375 |
+|       14 | 박진아  | 1232    |     33 |   990304 | 1023958375 |
+|       15 | 황상연  | 1234    |     33 |   990304 | 1023958375 |
++----------+---------+---------+--------+----------+------------+
+15 rows in set (0.00 sec)</code></pre>
+
+
+
+
                 <h4>memberID가 1인 데이터</h4>
                 <div class="info">
-                    SELECT * FROM members3 WHERE memberID = 1;
+                    SELECT * FROM members WHERE memberID = 1;
                 </div>
-                <pre><code class="language-js"> SELECT * FROM members3 WHERE memberID =1;
+                <pre><code class="language-js"> SELECT * FROM members WHERE memberID =1;
 +----------+---------+---------+--------+----------+------------+
 | memberID | youName | youPass | youAge | youBirth | regTime    |
 +----------+---------+---------+--------+----------+------------+
@@ -122,9 +226,9 @@
 1 row in set (0.00 sec)</code></pre>
                 <h4>memberID가 10보다 큰 데이터</h4>
                 <div class="info">
-                    SELECT * FROM members3 WHERE memberID > 10;
+                    SELECT * FROM members WHERE memberID > 10;
                 </div>
-                <pre><code class="language-js"> SELECT * FROM members3 WHERE memberID > 10;
+                <pre><code class="language-js"> SELECT * FROM members WHERE memberID > 10;
 +----------+---------+---------+--------+----------+------------+
 | memberID | youName | youPass | youAge | youBirth | regTime    |
 +----------+---------+---------+--------+----------+------------+
@@ -137,8 +241,8 @@
 5 rows in set (0.00 sec)</code></pre>
                 <h4>memberID가 5보다 크고 10보다 작은 데이터</h4>
                 <div class="info">
-                    SELECT * FROM members3 WHERE memberID > 5 AND memberID < 10; </div>
-                        <pre><code class="language-js">SELECT * FROM members3 WHERE memberID > 5 AND memberID < 10;
+                    SELECT * FROM members WHERE memberID > 5 AND memberID < 10; </div>
+                        <pre><code class="language-js">SELECT * FROM members WHERE memberID > 5 AND memberID < 10;
 +----------+---------+---------+--------+----------+------------+
 | memberID | youName | youPass | youAge | youBirth | regTime    |
 +----------+---------+---------+--------+----------+------------+
@@ -149,9 +253,9 @@
 +----------+---------+---------+--------+----------+------------+</code></pre>
                         <h4>memberID가 1, 5, 10 데이터(IN)</h4>
                         <div class="info">
-                            SELECT * FROM members3 WHERE memberID in (1,5,10);
+                            SELECT * FROM members WHERE memberID in (1,5,10);
                         </div>
-                        <pre><code class="language-js"> SELECT * FROM members3 WHERE memberID in (1,5,10);
+                        <pre><code class="language-js"> SELECT * FROM members WHERE memberID in (1,5,10);
 +----------+---------+---------+--------+----------+------------+
 | memberID | youName | youPass | youAge | youBirth | regTime    |
 +----------+---------+---------+--------+----------+------------+
@@ -162,9 +266,9 @@
 3 rows in set (0.00 sec)</code></pre>
                         <h4>youAge가 30보다 크고 40보다 작은 데이터(BETWEEN)</h4>
                         <div class="info">
-                            SELECT * FROM members3 youAge BETWEEN 30 AND 40;
+                            SELECT * FROM members WHERE youAge BETWEEN 30 AND 40;
                         </div>
-                        <pre><code class="language-js">SELECT * FROM members3 WHERE youAge BETWEEN 30 AND 40;
+                        <pre><code class="language-js">SELECT * FROM members WHERE youAge BETWEEN 30 AND 40;
 +----------+---------+---------+--------+----------+------------+
 | memberID | youName | youPass | youAge | youBirth | regTime    |
 +----------+---------+---------+--------+----------+------------+
@@ -174,6 +278,89 @@
 |       15 | 박진아  | 1232    |     33 |   990304 | 1023958375 |
 +----------+---------+---------+--------+----------+------------+</code></pre>
 
+                        <h4>나이가 30~40인 아닌 경우만 불러오기(BETWEEN)</h4>
+                        <div class="info">
+                            SELECT * FROM members WHERE youAge NOT BETWEEN 30 AND 40;
+                        </div>
+                        <pre><code class="language-js"> SELECT * FROM members WHERE youAge NOT BETWEEN 30 AND 40;
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|        1 | 남윤서  | 1234    |     19 |    60121 | 1023958375 |
+|        2 | 김진우  | 1234    |     21 |    40416 | 1231231233 |
+|        3 | 최선화  | 1234    |     26 |   990123 | 1104781152 |
+|        4 | 서대원  | 1234    |     26 |    11019 | 1111100000 |
+|        6 | 황인지  | 1234    |     20 |   990315 | 1474187756 |
+|        7 | 박정민  | 1234    |     29 |   961017 | 1023958375 |
+|        8 | 강서연  | 1234    |     27 |   980420 |  123456744 |
+|        9 | 이재혁  | 1215    |     24 |    10712 | 1023958375 |
+|       10 | 박소현  | 1234    |     29 |   960917 | 1231223123 |
+|       11 | 김혜지  | 1234    |     28 |   951002 |  123456789 |
+|       12 | 강경민  | 1234    |     28 |   970611 | 1023952467 |
++----------+---------+---------+--------+----------+------------+
+11 rows in set (0.00 sec)</code></pre>
+
+                        <h4>이름 중에 '연' 텍스트가 포함된 이름 불러오기</h4>
+                        <div class="info">SELECT * FROM members WHERE youName LIKE '%연%';</div>
+                        <pre><code class="language-js">SELECT * FROM members WHERE youName LIKE '%연%';
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|        8 | 강서연  | 1234    |     27 |   980420 |  123456744 |
+|       15 | 황상연  | 1234    |     33 |   990304 | 1023958375 |
++----------+---------+---------+--------+----------+------------+
+2 rows in set (0.00 sec)
+</code></pre>
+
+
+
+                        <h4>이름 중에 '김' 텍스트로 시작되는 이름 불러오기</h4>
+                        <div class="info">SELECT * FROM members WHERE youName LIKE '김%';</div>
+                        <pre><code class="language-js">SELECT * FROM members WHERE youName LIKE '김%';
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|        2 | 김진우  | 1234    |     21 |    40416 | 1231231233 |
+|        5 | 김현민  | 1234    |     32 |   930604 | 1023958375 |
+|       11 | 김혜지  | 1234    |     28 |   951002 |  123456789 |
++----------+---------+---------+--------+----------+------------+
+3 rows in set (0.00 sec)</code></pre>
+
+
+                        <h4>이름 중에 '현' 텍스트로 끝나는 이름 불러오기</h4>
+                        <div class="info">SELECT * FROM members WHERE youName LIKE '%현';</div>
+                        <pre><code class="language-js">SELECT * FROM members WHERE youName LIKE '%현';
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|       10 | 박소현  | 1234    |     29 |   960917 | 1231223123 |
++----------+---------+---------+--------+----------+------------+
+1 row in set (0.00 sec)</code></pre>
+
+
+                        <h4>이름 중에 '상' 텍스트가 들어가는 3글자 이름 불러오기</h4>
+                        <div class="info"> SELECT * FROM members WHERE youName LIKE '_상%';</div>
+                        <pre><code class="language-js">SELECT * FROM members WHERE youName LIKE '_상%';
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|       15 | 황상연  | 1234    |     33 |   990304 | 1023958375 |
++----------+---------+---------+--------+----------+------------+
+1 row in set (0.00 sec)</code></pre>
+
+
+                        <h4>이름 중에 '김' 또는 '이'로 시작하는 이름 불러오기</h4>
+                        <div class="info"> SELECT * FROM members WHERE youName LIKE '김%' OR youName LIKE '이%';</div>
+                        <pre><code class="language-js">SELECT * FROM members WHERE youName LIKE '김%' OR youName LIKE '이%';
++----------+---------+---------+--------+----------+------------+
+| memberID | youName | youPass | youAge | youBirth | regTime    |
++----------+---------+---------+--------+----------+------------+
+|        2 | 김진우  | 1234    |     21 |    40416 | 1231231233 |
+|        5 | 김현민  | 1234    |     32 |   930604 | 1023958375 |
+|        9 | 이재혁  | 1215    |     24 |    10712 | 1023958375 |
+|       11 | 김혜지  | 1234    |     28 |   951002 |  123456789 |
++----------+---------+---------+--------+----------+------------+
+4 rows in set (0.00 sec)</code></pre>
                 </div>
             </div>
     </main>
